--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,23 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+a:active {
+    text-decoration: underline;
+    color: black;
+}
